# gramify

./: .gitignore  Cargo.toml  README.md  gramify.sh
corpora/: akl-messages.json  akl-messages.msgpack  carpalx-books.json  carpalx-books.msgpack  iweb.all.msgpack  iweb.json  iweb.msgpack  typeracer.json  typeracer.msgpack  xsznix-fb-messages.json  xsznix-fb-messages.msgpack
src/: grams.rs  main.rs
src/reducers/: bigrams.rs  len.rs  letters.rs  mod.rs  reducer.rs  skipgrams.rs  trigrams.rs
